# AlexWoW

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  ANALYSIS.md  AlexWoW.slnx  CLAUDE.md  CONTRIBUTING.md  Directory.Build.props  Dockerfile  Dockerfile.auth  Dockerfile.web  Dockerfile.world  NOTICE.md  README.md  docker-compose.yml
.claude/: launch.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  regression.yml
.github/workflows/: ci.yml
deploy/: RUNNERS.md  SECRETS.md  deploy-manual.ps1  deploy.ps1
deploy/sql/: ef-baseline-alexwow_auth.sql  ef-initialcreate.sql  kanban-schema.sql  project-schema.sql  project-seed.sql
docs/: Implemented.md  NotImplemented.md  README.md  architecture.md  audit-spells-talents.md  cmangos-port-map.md  code-style.md  deployment.md  getting-started.md  opcodes-Implemented.md  opcodes-NotImplemented.md  roadmap.md  status.md
docs/TODO/: M6.1-starting-gear.md  M6.2-vendor.md  M6.3-combat.md  M6.4-spells.md  M6.5-quests.md  M6.6-loot.md  M6.7-ai.md  M6.8-perf-spatial-cache.md  M6.9-inventory-management.md  M7-tech-debt.md  M8-web-interface.md  README.md
docs/archive/: opcodes-Implemented.md
docs/classes/: README.md  deathknight-abilities.md  deathknight-talents.md  hunter-abilities.md  mage-abilities.md  mechanics.md  paladin-abilities.md  priest-abilities.md  rogue-abilities.md  shaman-abilities.md  warlock-abilities.md  warrior-abilities.md
docs/devlog/: M1-authserver.md  M10-spell-system.md  M11-professions.md  M12-spell-qa.md  M2-world-handshake.md  M3-character-screen.md  M4-enter-world.md  M5-visibility.md  M6-game-systems.md  M7-tech-debt.md  M8-web-interface.md  M9-progression.md  spell-verification-handoff.md
docs/onboarding/: addon-development.md  mcp-config.sample.json  runner-setup.md  ssh-config.sample
docs/races/: bloodelf.md  draenei.md  dwarf.md  human.md
docs/strategy/: cmangos-port.md
runner/: .env.example  docker-compose.runner.yml
src/AlexWoW.AuthServer/: AccountAdmin.cs  AccountCreator.cs  AlexWoW.AuthServer.csproj  AuthServerOptions.cs  CliRepository.cs  PasswordReset.cs  Program.cs  appsettings.json
src/AlexWoW.Cryptography/: AlexWoW.Cryptography.csproj  Arc4.cs  Srp6.cs  Srp6Client.cs  Srp6Server.cs  WorldAuth.cs  WorldHeaderCrypt.cs
src/AlexWoW.DataStores/: AlexWoW.DataStores.csproj  CombatRatingConversion.cs  CombatRatings.cs
src/AlexWoW.Database/: AlexWoW.Database.csproj  AuthDatabase.cs  AuthDbContext.cs  AuthDbContextDesignTimeFactory.cs  CharactersDatabase.cs  ServerSettingKeys.cs  WorldDatabase.cs
src/AlexWoW.Web/: AlexWoW.Web.csproj  Program.cs  WebOptions.cs  appsettings.json
src/AlexWoW.WorldServer/: AlexWoW.WorldServer.csproj  Program.cs  WorldServerOptions.cs  appsettings.json
tests/AlexWoW.Cryptography.Tests/: AlexWoW.Cryptography.Tests.csproj  M2CryptoTests.cs  Srp6Tests.cs
tests/AlexWoW.Web.Tests/: AdminResetPasswordTests.cs  AlexWoW.Web.Tests.csproj  DetailsAppearanceTests.cs  DetailsRenderTests.cs  GameDataTests.cs  ItemDisplayTests.cs  ItemIconServiceTests.cs  ItemSearchFilterTests.cs  ItemsRenderTests.cs  ServerSettingsServiceTests.cs  TestDoubles.cs
tests/AlexWoW.WorldServer.Tests/: AlexWoW.WorldServer.Tests.csproj  CombatStatsTests.cs  DisplayDataFormModelTests.cs  GroupPacketsTests.cs  GroupRecoveryTests.cs  GroupT3T4T5Tests.cs  GroupTests.cs  GuildTests.cs  HunterPetTests.cs  PetTests.cs  RuneScaffoldTests.cs  SpellCatalogFixtureTests.cs  (+3 more)
tools/WowLauncher/: CMakeLists.txt  README.md  app.manifest  generate-manifest.py  mingw-w64.toolchain.cmake  resources.rc
tools/WowLauncher/src/: config.cpp  config.h  downloader.cpp  downloader.h  hasher.cpp  hasher.h  main.cpp  manifest.cpp  manifest.h  process.cpp  process.h  ui.cpp  ui.h
(+565 files in other folders)
